5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4377/executions/1649_2704.log
== TEST (2019-04-05 19:42:59) 
-- CODE:
nota=float(input("nota"))
mensagem=input("mensagem")
acrescimo=10/100*nota
if(mensagem==s) :
	n=nota+acrescimo
else:
	n=nota
print(n)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(mensagem==s) :
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 19:45:35) 
-- CODE:
nota=float(input("nota"))
mensagem=input("mensagem")
acrescimo=10/100*nota
if(mensagem.upper()=="S") :
	n=nota+acrescimo
else:
	n=nota
print(n)	
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 19:45:44) 
-- CODE:
nota=float(input("nota"))
mensagem=input("mensagem")
acrescimo=10/100*nota
if(mensagem.upper()=="S") :
	n=nota+acrescimo
else:
	n=nota
print(n)	
-- EXECUTION TIME:
0.158829
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:05:03) 
-- CODE:
nota=float(input("nota"))
msn=input("msn")
w=nota*10/100
acres=nota+w
if(msn.upper()==S):
	print(acres)
else:
	print(nota)


-- EXECUTION TIME:
0.127376
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2704/main.py", line 5, in <module>
    if(msn.upper()==S):
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:05:04) 
-- CODE:
nota=float(input("nota"))
msn=input("msn")
w=nota*10/100
acres=nota+w
if(msn.upper()==S):
	print(acres)
else:
	print(nota)


-- EXECUTION TIME:
0.218123
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2704/main.py", line 5, in <module>
    if(msn.upper()==S):
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:05:44) 
-- CODE:
nota=float(input("nota"))
msn=input("msn")
w=nota*10/100
acres=nota+w
if(msn.upper() == S):
	print(acres)
else:
	print(nota)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(msn.upper() == S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:06:05) 
-- CODE:
nota=float(input("nota"))
msn=input("msn")
w=nota*10/100
acres=nota+w
if(msn.upper() == "S"):
	print(acres)
else:
	print(nota)


-- EXECUTION TIME:
0.142619
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
